--- a/src/index.html
+++ b/src/index.html
@@ -7,8 +7,12 @@
     <link rel="stylesheet" href="assets/css/style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300&family=Montserrat&family=Raleway:wght@100&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300&family=Montserrat&family=Raleway:wght@100&display=swap"
+          rel="stylesheet">
 
+    <script defer src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
+            integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
+            crossorigin="anonymous"></script>
 
     <title>Title</title>
 </head>
@@ -17,21 +21,26 @@
 <body>
 
 
-<nav class="navbar navbar-expand-lg fs-4">
+<nav class="navbar navbar-expand-lg fs-4 navbar-dark">
     <div class="container-fluid">
-        <a href="index.html" class="navbar-brand mb-0">
-
+        <a class="navbar-brand" href="index.html">
+            icon
         </a>
-        <div class="collapse navbar-collapse justify-content-center">
-            <ul class="navbar-nav mr-auto">
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
+                aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+
+        <div class="collapse navbar-collapse justify-content-center" id="navbarSupportedContent">
+            <ul class="navbar-nav">
                 <li class="nav-item active text-center mx-3">
-                    <a href="frontController.php" class="nav-link text-white ">ACCUEIL</a>
+                    <a href="index.html" class="nav-link active text-white">ACCUEIL</a>
                 </li>
                 <li class="nav-item active text-center mx-3">
-                    <a href="frontController.php" class="nav-link text-white ">PROJETS</a>
+                    <a href="index.html" class="nav-link active text-white ">PROJETS</a>
                 </li>
                 <li class="nav-item active text-center mx-3">
-                    <a href="frontController.php" class="nav-link text-white ">CONTACT</a>
+                    <a href="index.html" class="nav-link active  text-white">CONTACT</a>
                 </li>
             </ul>
         </div>
@@ -44,18 +53,6 @@
 
 
 </main>
-
-
-<!-- Optional JavaScript -->
-<script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
-        integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN"
-        crossorigin="anonymous"></script>
-<script src="https://cdn.jsdelivr.net/npm/popper.js@1.12.9/dist/umd/popper.min.js"
-        integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q"
-        crossorigin="anonymous"></script>
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3"
-        crossorigin="anonymous"></script>
 
 
 </body>
