--- a/src/cgj.html
+++ b/src/cgj.html
@@ -13,7 +13,7 @@
             integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
             crossorigin="anonymous"></script>
 
-    <title>Title</title>
+    <title>CODE GAME JAM 2022</title>
 </head>
 
 
@@ -95,17 +95,52 @@
 </nav>
 
 
-<main class="container-fluid">
+<main class="container">
 
-    <div class="row" id="contact">
-        <div class="d-flex justify-content-center col-12">
-            <h4 style="color: white ">CONTACT</h4>
+
+    <div class="row">
+        <div class="d-flex justify-content-center">
+            <h1 class="my-5">CODE GAME JAM 2022</h1>
         </div>
-        <div class="d-flex justify-content-center col-12">
-        <h1 style="color: white">jihanhajem@gmail.com</h1>
-        </div>
+    </div>
+    <div class="d-flex justify-content-center">
+        <img id="" src="assets/img/cgj.jpg" alt=""/>
+    </div>
 
+    <div class="d-flex justify-content-center">
+        <h2 style="color: white" class="my-5">Qu'est ce que la Code Game Jam ?</h2>
 
+    </div>
+    <div class="mx-5">
+        <h5>" En se basant sur le concept des “Jam”, le principe du concours “Code Game Jam” est de créer un jeu vidéo dans un temps donné,
+            tout en respectant le thème de l’édition. Les participants ont alors 30 heures pour pouvoir développer un petit jeu vidéo pour lequel ils ont cartes blanches autant
+            d’un point de vue technique (langage de programmation, logiciel utilisés, format du jeu)
+            que graphique (moteur de jeu, boîtes à outils). Créativité, collaboration et fun sont les maîtres mots du concours Code Game Jam ! " (<a style="color: white" href="https://codegamejam.extragames.fr/"> source</a> ) <br>
+
+        </h5>
+    </div>
+
+    <div class="d-flex justify-content-center">
+        <h2 style="color: white" class="my-5">DEROULEMENT</h2>
+    </div>
+    <div class="mx-5">
+        <h5>Dans le cadre de ma passion pour la conception graphique, j'ai eu l'opportunité de participer à un projet de développement de jeu vidéo en tant que designer graphique.
+            Ce projet, nommé "Code Gam Jam", consistait à développer un jeu vidéo en un temps limité de 30 heures. Le sujet de cette édition était "Merveilles des Profondeurs" <br> </h5>
+
+            <h5 class="my-4">J'ai été impliqué dans la conception graphique de ce jeu vidéo, en créant les personnages, les arrière-plans, et les décors
+            pour rendre le jeu visuellement attrayant. J'ai travaillé principalement sur Clip Studio Paint, en utilisant mes compétences en illustration et en conception graphique pour donner vie
+            à l'univers du jeu. J'ai travaillé au sein d'une équipe de 6 personnes</h5>
+
+        <h5 class="my-4">Le jeu que nous avons créé s'appelle "Beyond the Styx". Mon travail de conception graphique a permis de créer un univers visuellement cohérent et attractif, malgré les contraintes de temps.
+
+            Au-delà de mes responsabilités en tant que designer graphique, j'ai également travaillé en étroite collaboration avec les autres membres de l'équipe pour assurer la
+            cohérence entre le gameplay et l'aspect visuel du jeu. <br>
+
+            Ce projet m'a permis de mettre à profit mes compétences en conception graphique et en illustration pour créer un univers visuellement attrayant et cohérent.
+            Il m'a également permis de travailler en équipe dans un environnement de développement de jeu vidéo dynamique et stimulant, en contribuant à la réussite globale du projet.
+        </h5>
+
+        <h5 class="my-5">Malgré le stress et la courte période de temps pour atteindre nos objectifs, nous sommes arrivés deuxième de cette édition ! </h5>
     </div>
 
 </main>
