--- a/src/gallia.html
+++ b/src/gallia.html
@@ -13,7 +13,7 @@
             integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
             crossorigin="anonymous"></script>
 
-    <title>Title</title>
+    <title>GALLIA</title>
 </head>
 
 
@@ -95,17 +95,52 @@
 </nav>
 
 
-<main class="container-fluid">
+<main class="container">
 
-    <div class="row" id="contact">
-        <div class="d-flex justify-content-center col-12">
-            <h4 style="color: white ">CONTACT</h4>
+
+    <div class="row">
+        <div class="d-flex justify-content-center">
+            <h1 class="my-5">GALLIA</h1>
         </div>
-        <div class="d-flex justify-content-center col-12">
-        <h1 style="color: white">jihanhajem@gmail.com</h1>
-        </div>
+    </div>
+    <div class="d-flex justify-content-center">
+        <img id="galliapage" src="assets/img/Gallia.PNG" alt=""/>
+    </div>
 
+    <div class="d-flex justify-content-center">
+        <h2 style="color: white" class="my-5">DESCRIPTION DU PROJET</h2>
 
+    </div>
+    <div class="mx-5">
+        <h5>Dans le cadre du semestre 4 de notre seconde année de BUT Informatique, nous avons eu à réaliser le
+            développement d’une application complexe. Ce projet nous permet avant tout de mettre en pratique nos
+            connaissances et nos compétences en développement Web, en qualité logicielle, mais aussi en ergonomie et
+            sécurité. Ainsi, en partant d’un code existant, notre objectif est, par groupe de 4 personnes, d’améliorer
+            les performances d’une
+            application Web qui calcule l’itinéraire le plus court entre deux communes. <br>
+        </h5>
+        <h5 class="my-5"> Le site à été réalisé avec PHP, HTML, CSS, Boostrap, JavaScript, Twig ainsi que Postgres.</h5>
+
+    </div>
+
+    <div class="d-flex justify-content-center">
+        <h2 style="color: white" class="my-5">RESPONSABILITES DANS LE PROJET</h2>
+    </div>
+    <div class="mx-5">
+        <h5>Pour la réalisation du projet Gallia, j'ai été impliquée en tant que développeur front-end, étant donné mon
+            goût pour le design. <br>
+            J'ai donc pris en charge la création des maquettes sur Figma, ainsi que leur implémentation avec <a
+                    style="color: white" href="https://twig.symfony.com/">Twig</a>.
+            J'ai également utilisé l'API Google Maps et JavaScript pour rendre l'application fonctionnelle. <br></h5>
+        <h5 class="my-5"> De plus, nous avons utilisé Scrum pour le développement du projet, et j'ai tenu le rôle de
+            product owner.
+            Mon rôle consistait à assurer la communication et la collaboration entre les membres de l'équipe, en
+            veillant à ce que les objectifs du projet soient atteints dans les délais impartis. <br>
+            Mes responsabilités sur le projet ont donc été multiples, allant de la conception à la mise en œuvre de
+            l'application, en passant par la communication et la coordination de l'équipe. <br>
+            J'ai ainsi pu contribuer à la réussite de ce projet en mettant à profit mes compétences, tout en étant un
+            élément clé de l'équipe de développement agile.
+        </h5>
     </div>
 
 </main>
