--- a/src/projet.html
+++ b/src/projet.html
@@ -77,10 +77,13 @@
         <div class="collapse navbar-collapse justify-content-center" id="navbarSupportedContent">
             <ul class="navbar-nav">
                 <li class="nav-item active text-center mx-3">
-                    <a href="index.html" class="nav-link active text-white">ABOUT</a>
+                    <a href="index.html" class="nav-link active text-white">ACCUEIL</a>
                 </li>
                 <li class="nav-item active text-center mx-3">
-                    <a href="projet.html" class="nav-link active text-white ">WORK</a>
+                    <a href="index.html#apropos" class="nav-link active  text-white">A PROPOS</a>
+                </li>
+                <li class="nav-item active text-center mx-3">
+                    <a href="projet.html" class="nav-link active text-white ">PROJETS</a>
                 </li>
                 <li class="nav-item active text-center mx-3">
                     <a href="contact.html" class="nav-link active  text-white">CONTACT</a>
@@ -102,17 +105,15 @@
                 <article>
                     <div class="article-wrapper">
                         <figure>
-                            <img src="https://picsum.photos/id/1011/800/450" alt=""/>
+                            <img src="assets/img/themis.PNG" alt=""/>
                         </figure>
                         <div class="article-body">
                             <h2>Thémis</h2>
-                            <p>
-                                Curabitur convallis ac quam vitae laoreet. Nulla mauris ante, euismod sed lacus sit
-                                amet, congue bibendum eros. Etiam mattis lobortis porta. Vestibulum ultrices iaculis
-                                enim imperdiet egestas.
+                            <p style="color: black">
+                                Thémis est une application web de décision collective
                             </p>
-                            <a href="#" class="read-more">
-                                Read more <span class="sr-only">about this is some title</span>
+                            <a href="themis.html" class=" read-more">
+                                Lire plus <span class="sr-only">about this is some title</span>
                                 <svg xmlns="http://www.w3.org/2000/svg" class="icon" viewBox="0 0 20 20"
                                      fill="currentColor">
                                     <path fill-rule="evenodd"
@@ -127,17 +128,15 @@
 
                     <div class="article-wrapper">
                         <figure>
-                            <img src="https://picsum.photos/id/1005/800/450" alt=""/>
+                            <img src="assets/img/cgj.jpg" alt=""/>
                         </figure>
                         <div class="article-body">
                             <h2>Code Game Jam</h2>
-                            <p>
-                                Curabitur convallis ac quam vitae laoreet. Nulla mauris ante, euismod sed lacus sit
-                                amet, congue bibendum eros. Etiam mattis lobortis porta. Vestibulum ultrices iaculis
-                                enim imperdiet egestas.
+                            <p style="color: black">
+                                L’objectif : programmer un jeu vidéo en 30h !
                             </p>
-                            <a href="#" class="read-more">
-                                Read more <span class="sr-only">about this is some title</span>
+                            <a href="cgj.html" class="read-more">
+                                Lire plus <span class="sr-only">about this is some title</span>
                                 <svg xmlns="http://www.w3.org/2000/svg" class="icon" viewBox="0 0 20 20"
                                      fill="currentColor">
                                     <path fill-rule="evenodd"
@@ -152,16 +151,14 @@
 
                     <div class="article-wrapper">
                         <figure>
-                            <img src="https://picsum.photos/id/103/800/450" alt=""/>
+                            <img id="gallia" src="assets/img/Gallia.PNG" alt=""/>
                         </figure>
                         <div class="article-body">
-                            <h2>Application Maps</h2>
-                            <p>
-                                Curabitur convallis ac quam vitae laoreet. Nulla mauris ante, euismod sed lacus sit
-                                amet, congue bibendum eros. Etiam mattis lobortis porta. Vestibulum ultrices iaculis
-                                enim imperdiet egestas.
+                            <h2>GALLIA</h2>
+                            <p style="color: black">
+                               Gallia est une application web de calcul de plus court chemin entre deux villes
                             </p>
-                            <a href="#" class="read-more">
+                            <a href="gallia.html" class="read-more">
                                 Read more <span class="sr-only">about this is some title</span>
                                 <svg xmlns="http://www.w3.org/2000/svg" class="icon" viewBox="0 0 20 20"
                                      fill="currentColor">
