--- a/src/themis.html
+++ b/src/themis.html
@@ -13,7 +13,7 @@
             integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
             crossorigin="anonymous"></script>
 
-    <title>Title</title>
+    <title>THEMIS</title>
 </head>
 
 
@@ -95,17 +95,63 @@
 </nav>
 
 
-<main class="container-fluid">
+<main class="container">
 
-    <div class="row" id="contact">
-        <div class="d-flex justify-content-center col-12">
-            <h4 style="color: white ">CONTACT</h4>
+
+    <div class="row">
+        <div class="d-flex justify-content-center">
+            <h1 class="my-5">THEMIS</h1>
         </div>
-        <div class="d-flex justify-content-center col-12">
-        <h1 style="color: white">jihanhajem@gmail.com</h1>
-        </div>
+    </div>
 
 
+    <div class="d-flex justify-content-center">
+        <img id="themispage" src="assets/img/themis3.PNG" alt=""/>
+    </div>
+
+    <div class="d-flex justify-content-center">
+        <h2 style="color: white" class="my-5">DESCRIPTION DU PROJET</h2>
+
+    </div>
+    <div class="mx-5">
+        <h5>Dans le cadre du semestre 3 de notre seconde année de BUT Informatique, nous avons eu l'occasion de
+            travailler sur le projet Thémis. <br>
+            Notre objectif était de développer une plateforme web interactive créer une application web de décision
+            collective,
+            qui permettrait de gérer un grand ensemble de questions, toutes indépendantes les unes des autres.
+        </h5>
+        <h5 class="my-5"> Le site à été réalisé avec PHP, HTML, CSS, Bootstrap et Postgres.
+    </div>
+
+    <div class="d-flex justify-content-center">
+        <h2 style="color: white" class="my-5">RESPONSABILITES DANS LE PROJET</h2>
+    </div>
+    <div class="mx-5">
+        <h5>Dans le cadre de ce projet, j'ai joué un rôle clé en tant que développeur front-end. J'ai été chargé de la
+            création des maquettes sur Figma ainsi que de l'implémentation de ces maquettes en utilisant Bootstrap, CSS
+            et HTML.
+            Mon rôle était de m'assurer que le site web était convivial, facile à utiliser et attrayant pour les
+            utilisateurs finaux. <br></h5>
+
+        <h5 class="my-5">En plus de mes responsabilités spécifiques en tant que développeur front-end, j'ai été impliqué
+            à toutes les
+            échelles du projet Thémis.
+            J'ai participé activement aux différentes étapes de la conception et du développement, depuis l'analyse des
+            besoins des utilisateurs jusqu'à la mise en production de l'application. <br></h5>
+
+
+        <h5 class="my-5">Nous avons utilisé la méthodologie agile pour le développement du projet, ce qui nous a permis
+            de nous adapter rapidement aux changements de priorités et de délais.
+            En tant que scrum master de l'équipe, j'ai contribué à la planification et à la répartition des tâches, en
+            travaillant en étroite collaboration avec les autres membres pour assurer la
+            réalisation de nos objectifs communs dans les délais impartis.
+            <br>
+
+            Enfin, j'ai également pris part à la mise en production de l'application, en veillant à ce que le site web
+            soit déployé avec succès et qu'il fonctionne sans problème. Mon implication
+            à toutes les étapes du projet m'a permis de comprendre les différents aspects du développement d'une
+            application web complexe et de contribuer à sa réussite globale. <br>
+        </h5>
     </div>
 
 </main>
