--- a/src/index.html
+++ b/src/index.html
@@ -78,11 +78,15 @@
         <div class="collapse navbar-collapse justify-content-center" id="navbarSupportedContent">
             <ul class="navbar-nav">
                 <li class="nav-item active text-center mx-3">
-                    <a href="index.html" class="nav-link active text-white">ABOUT</a>
+                    <a href="index.html" class="nav-link active text-white">ACCUEIL</a>
                 </li>
                 <li class="nav-item active text-center mx-3">
-                    <a href="projet.html" class="nav-link active text-white ">WORK</a>
+                    <a href="index.html#apropos" class="nav-link active  text-white">A PROPOS</a>
                 </li>
+                <li class="nav-item active text-center mx-3">
+                    <a href="projet.html" class="nav-link active text-white ">PROJETS</a>
+                </li>
+
                 <li class="nav-item active text-center mx-3">
                     <a href="contact.html" class="nav-link active  text-white">CONTACT</a>
                 </li>
@@ -93,7 +97,76 @@
 </nav>
 
 
-<main class="container">
+<main class="container my-5">
+
+    <div class="mx-5 row d-flex justify-content-center" id="name">
+        <div class="col-sm-12 col-md-12 col-lg-12 offset-lg-2">
+            <h1>
+                JIHAN <strong>HAJEM</strong>
+            </h1>
+            <h3 class="my-2">Etudiante en Informatique</h3>
+            <a href="assets/file/CV-HAJEM.pdf" style="color: white" download>Télécharger mon CV !</a> <br>
+
+                <a class="col-6" href="https://www.linkedin.com/in/jihan-hajem-459663230/"> <img class="icon"
+                                                                                                      alt="linkedin"
+                                                                                                      src="assets/img/linkedin.png"></a>
+                <a class="col-6" href="https://github.com/JihanH">
+                    <?xml version="1.0"?>
+                    <svg fill="#FFFFFF" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" width="60px"
+                         height="60px">
+                        <path d="M10.9,2.1c-4.6,0.5-8.3,4.2-8.8,8.7c-0.5,4.7,2.2,8.9,6.3,10.5C8.7,21.4,9,21.2,9,20.8v-1.6c0,0-0.4,0.1-0.9,0.1 c-1.4,0-2-1.2-2.1-1.9c-0.1-0.4-0.3-0.7-0.6-1C5.1,16.3,5,16.3,5,16.2C5,16,5.3,16,5.4,16c0.6,0,1.1,0.7,1.3,1c0.5,0.8,1.1,1,1.4,1 c0.4,0,0.7-0.1,0.9-0.2c0.1-0.7,0.4-1.4,1-1.8c-2.3-0.5-4-1.8-4-4c0-1.1,0.5-2.2,1.2-3C7.1,8.8,7,8.3,7,7.6C7,7.2,7,6.6,7.3,6 c0,0,1.4,0,2.8,1.3C10.6,7.1,11.3,7,12,7s1.4,0.1,2,0.3C15.3,6,16.8,6,16.8,6C17,6.6,17,7.2,17,7.6c0,0.8-0.1,1.2-0.2,1.4 c0.7,0.8,1.2,1.8,1.2,3c0,2.2-1.7,3.5-4,4c0.6,0.5,1,1.4,1,2.3v2.6c0,0.3,0.3,0.6,0.7,0.5c3.7-1.5,6.3-5.1,6.3-9.3 C22,6.1,16.9,1.4,10.9,2.1z"/>
+                    </svg>
+                </a>
+
+        </div>
+    </div>
+
+
+    <div class="row">
+        <div class="d-flex justify-content-center">
+            <h2 id="apropos">A PROPOS DE MOI</h2>
+        </div>
+    </div>
+
+    <div class="row">
+        <div class="my-5 col-md-6 col-lg-6">
+            <h2 class="offset-3 maformation">MON PROJET</h2>
+            <p class="my-5">Passionnée de la technologie et du design, je suis fascinée par l'univers du développement web. <br>
+                Je suis particulièrement intéressée par le développement front-end.</p>
+        </div>
+
+        <div class="my-5 col-md-6 col-lg-6">
+            <h2 class="offset-3 maformation">MA FORMATION</h2>
+            <div class="timeline" id="tl">
+                <div class="event">
+                    <div class="date">2021-2024</div>
+                    <div class="content">BUT Informatique<br>
+                        Institut universitaire technologique - Montpellier <br>
+                        Parcours : réalisation d'applications, conception,
+                        développement, validation
+                    </div>
+                </div>
+                <div class="event">
+                    <div class="date">2020-2021</div>
+                    <div class="content">Baccalauréat Général<br>
+                        Spécialité Mathématiques et Physique-Chimie <br>
+                        section européenne (anglais)
+                    </div>
+                </div>
+                <div class="event">
+                    <div class="date">2020-2021</div>
+                    <div class="content">Cambridge certificate</div>
+                </div>
+            </div>
+        </div>
+    </div>
+
+
+    <div class="row">
+        <div class="col-12">
+        <h5 class="my-5">De nature créative et curieuse, j'aime énormément découvrir de nouvelles choses. En dehors de l'informatique,je suis passionnée par l'art sous toutes ses formes, mais aussi par la littérature.<br></h5>
+        </div>
+    </div>
 
 
 </main>
