--- a/src/portfolio.html
+++ b/src/portfolio.html
@@ -13,7 +13,7 @@
             integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
             crossorigin="anonymous"></script>
 
-    <title>Projets</title>
+    <title>PORTFOLIO</title>
 </head>
 
 
@@ -95,120 +95,55 @@
 </nav>
 
 
-<main class="container my-5">
-
-    <div class="container-fluid my-5">
-
-        <div class="container-fluid row">
-
-            <section class="articles">
-                <article>
-                    <div class="article-wrapper">
-                        <figure>
-                            <img src="assets/img/themis.PNG" alt=""/>
-                        </figure>
-                        <div class="article-body">
-                            <h2>Thémis</h2>
-                            <p style="color: black">
-                                Thémis est une application web de décision collective
-                            </p>
-                            <a href="themis.html" class=" read-more">
-                                Lire plus <span class="sr-only">about this is some title</span>
-                                <svg xmlns="http://www.w3.org/2000/svg" class="icon" viewBox="0 0 20 20"
-                                     fill="currentColor">
-                                    <path fill-rule="evenodd"
-                                          d="M12.293 5.293a1 1 0 011.414 0l4 4a1 1 0 010 1.414l-4 4a1 1 0 01-1.414-1.414L14.586 11H3a1 1 0 110-2h11.586l-2.293-2.293a1 1 0 010-1.414z"
-                                          clip-rule="evenodd"/>
-                                </svg>
-                            </a>
-                        </div>
-                    </div>
-                </article>
-                <article>
-
-                    <div class="article-wrapper">
-                        <figure>
-                            <img src="assets/img/cgj.jpg" alt=""/>
-                        </figure>
-                        <div class="article-body">
-                            <h2>Code Game Jam</h2>
-                            <p style="color: black">
-                                L’objectif : programmer un jeu vidéo en 30h !
-                            </p>
-                            <a href="cgj.html" class="read-more">
-                                Lire plus <span class="sr-only">about this is some title</span>
-                                <svg xmlns="http://www.w3.org/2000/svg" class="icon" viewBox="0 0 20 20"
-                                     fill="currentColor">
-                                    <path fill-rule="evenodd"
-                                          d="M12.293 5.293a1 1 0 011.414 0l4 4a1 1 0 010 1.414l-4 4a1 1 0 01-1.414-1.414L14.586 11H3a1 1 0 110-2h11.586l-2.293-2.293a1 1 0 010-1.414z"
-                                          clip-rule="evenodd"/>
-                                </svg>
-                            </a>
-                        </div>
-                    </div>
-                </article>
-                <article>
-
-                    <div class="article-wrapper">
-                        <figure>
-                            <img id="gallia" src="assets/img/Gallia.PNG" alt=""/>
-                        </figure>
-                        <div class="article-body">
-                            <h2>GALLIA</h2>
-                            <p style="color: black">
-                               Gallia est une application web de calcul de plus court chemin entre deux villes
-                            </p>
-                            <a href="gallia.html" class="read-more">
-                                Read more <span class="sr-only">about this is some title</span>
-                                <svg xmlns="http://www.w3.org/2000/svg" class="icon" viewBox="0 0 20 20"
-                                     fill="currentColor">
-                                    <path fill-rule="evenodd"
-                                          d="M12.293 5.293a1 1 0 011.414 0l4 4a1 1 0 010 1.414l-4 4a1 1 0 01-1.414-1.414L14.586 11H3a1 1 0 110-2h11.586l-2.293-2.293a1 1 0 010-1.414z"
-                                          clip-rule="evenodd"/>
-                                </svg>
-                            </a>
-                        </div>
-                    </div>
-                </article>
-            </section>
+<main class="container">
 
 
-        </div>
-
-        <div class="container-fluid row my-sm-4 my-md-5 my-lg-5">
-
-            <section class="articles">
-                <article>
-                    <div class="article-wrapper">
-                        <figure>
-                            <img src="assets/img/portfolio.PNG" alt=""/>
-                        </figure>
-                        <div class="article-body">
-                            <h2>PORTFOLIO</h2>
-                            <p style="color: black">
-                                Quelques détails sur ce portfolio toujours en cours de construction...
-                            </p>
-                            <a  style="color: black" href="portfolio.html" class="read-more">
-                                Read more <span class="sr-only">about this is some title</span>
-                                <svg xmlns="http://www.w3.org/2000/svg" class="icon" viewBox="0 0 20 20"
-                                     fill="currentColor">
-                                    <path fill-rule="evenodd"
-                                          d="M12.293 5.293a1 1 0 011.414 0l4 4a1 1 0 010 1.414l-4 4a1 1 0 01-1.414-1.414L14.586 11H3a1 1 0 110-2h11.586l-2.293-2.293a1 1 0 010-1.414z"
-                                          clip-rule="evenodd"/>
-                                </svg>
-                            </a>
-                        </div>
-                    </div>
-                </article>
-
-
-            </section>
-
-
+    <div class="row">
+        <div class="d-flex justify-content-center">
+            <h1 class="my-5">PORTFOLIO</h1>
         </div>
     </div>
 
 
+    <div class="d-flex justify-content-center">
+        <img id="themispage" src="assets/img/portfolio.PNG" alt=""/>
+    </div>
+
+    <div class="d-flex justify-content-center">
+        <h2 style="color: white" class="my-5">DESCRIPTION DU PROJET</h2>
+
+    </div>
+    <div class="mx-5">
+        <h5>
+            Dans le cadre de la création de mon portfolio personnel, j'ai réalisé un site web en utilisant
+            principalement les langages HTML et CSS. L'objectif de ce projet était de créer un site web qui met en
+            valeur mes compétences et mes projets professionnels.
+        </h5>
+        <h5 class="my-4">
+            Pour commencer, j'ai créé un design de maquette sur Figma en utilisant mes compétences en conception
+            graphique. Ensuite, j'ai utilisé HTML pour créer la structure de base du site web, en incluant
+            des sections pour les informations personnelles, les projets professionnels, les compétences et les
+            formations. <br>
+        </h5>
+        <h5 class="my-4">
+            J'ai ensuite utilisé CSS pour styliser le site web, en appliquant des couleurs, des polices et des effets
+            visuels pour rendre le site web visuellement attrayant.
+            J'ai également utilisé des frameworks tels que Bootstrap pour rendre le site web plus responsive et
+            accessible sur différentes tailles d'écran. <br>
+        </h5>
+        <h5 class="my-4">
+            Tout au long du projet, j'ai été impliqué à toutes les échelles, depuis la conception jusqu'à la mise en
+            œuvre finale du site web. J'ai travaillé de manière autonome, en prenant
+            des décisions de conception et de développement en fonction de mes compétences et de mes connaissances en
+            matière de développement web. <br>
+        </h5>
+        <h5 class="my-4">
+            Ce projet m'a permis de mettre en pratique mes compétences en développement web, tout en créant un site web
+            qui met en valeur mes projets professionnels et mes compétences.
+            Cependant, par contrainte de temps, ce portfolio n'est pas encore terminé. Des changements sont à venir...<br>
+        </h5>
+
+    </div>
 </main>
 
 
