--- a/themis.html
+++ b/themis.html
@@ -106,7 +106,7 @@
 
 
     <div class="d-flex justify-content-center">
-        <img id="themispage" src="assets/img/themis3.PNG" alt=""/>
+        <img id="themispage" src="assets/img/themis3.png" alt=""/>
     </div>
 
     <div class="d-flex justify-content-center">
