--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
             integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
             crossorigin="anonymous"></script>
 
-    <title>Title</title>
+    <title>Accueil</title>
 </head>
 
 
@@ -107,10 +107,10 @@
             <h3 class="my-2">Etudiante en Informatique</h3>
             <a href="assets/file/CV-HAJEM.pdf" style="color: white" download>Télécharger mon CV !</a> <br>
 
-                <a class="col-6" href="https://www.linkedin.com/in/jihan-hajem-459663230/"> <img class="icon"
+                <a class="col-6" href="https://www.linkedin.com/in/jihan-hajem-459663230/" target=”_blank”> <img class="icon"
                                                                                                       alt="linkedin"
                                                                                                       src="assets/img/linkedin.png"></a>
-                <a class="col-6" href="https://github.com/JihanH">
+                <a class="col-6" href="https://github.com/JihanH" target=”_blank”>
                     <?xml version="1.0"?>
                     <svg fill="#FFFFFF" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" width="60px"
                          height="60px">
@@ -132,7 +132,8 @@
         <div class="my-5 col-md-6 col-lg-6">
             <h2 class="offset-3 maformation">MON PROJET</h2>
             <p class="my-5">Passionnée de la technologie et du design, je suis fascinée par l'univers du développement web. <br>
-                Je suis particulièrement intéressée par le développement front-end.</p>
+                Je suis particulièrement intéressée par le développement front-end.</p> <br>
+            <p>Mon objectif est de devenir développeuse fo</p>
         </div>
 
         <div class="my-5 col-md-6 col-lg-6">
