--- a/contact.html
+++ b/contact.html
@@ -95,17 +95,31 @@
 </nav>
 
 
-<main class="container-fluid">
+<main class="container">
 
-    <div class="row" id="contact">
-        <div class="d-flex justify-content-center col-12">
-            <h4 style="color: white ">CONTACT</h4>
+    <div class="d-flex justify-content-center col-12 my-5">
+
+    </div>
+    <div class="d-flex justify-content-center my-5">
+        <div class="col-6">
+            <form method="post" action="https://forms.un-static.com/forms/355f2247393084532ccd676cf4d577e6e73df84f">
+                <div class="mb-3">
+                    <label for="exampleInputEmail1" class="form-label">Votre nom</label>
+                    <input type="email" class="form-control">
+                </div>
+                <div class="mb-3">
+                    <label for="exampleInputEmail1" class="form-label">Votre adresse email</label>
+                    <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp">
+                </div>
+                <div class="mb-3">
+                    <label for="message" class="form-label">Message</label>
+                    <textarea id="message" name="message" cols="40" rows="10" required="required"
+                              class="form-control"></textarea>
+
+                </div>
+                <button type="submit" class="btn btn-primary">Envoyer</button>
+            </form>
         </div>
-        <div class="d-flex justify-content-center col-12">
-        <h1 style="color: white">jihanhajem@gmail.com</h1>
-        </div>
-
-
     </div>
 
 </main>
