--- a/contact.html
+++ b/contact.html
@@ -105,7 +105,7 @@
             <form method="post" action="https://forms.un-static.com/forms/355f2247393084532ccd676cf4d577e6e73df84f">
                 <div class="mb-3">
                     <label for="exampleInputEmail1" class="form-label">Votre nom</label>
-                    <input type="email" class="form-control">
+                    <input type="text" class="form-control">
                 </div>
                 <div class="mb-3">
                     <label for="exampleInputEmail1" class="form-label">Votre adresse email</label>
