--- a/index.html
+++ b/index.html
@@ -164,7 +164,9 @@
 
     <div class="row">
         <div class="col-12">
-        <h5 class="my-5">De nature créative et curieuse, j'aime énormément découvrir de nouvelles choses. En dehors de l'informatique,je suis passionnée par l'art sous toutes ses formes, mais aussi par la littérature.<br></h5>
+        <h5 class="my-5">Je suis quelqu'un de déterminée et prête à tout pour atteindre mes objectifs. <br>
+            De nature créative et curieuse, j'aime énormément découvrir de nouvelles choses. <br>
+            En dehors de l'informatique,je suis passionnée par l'art sous toutes ses formes, mais aussi par la littérature.<br></h5>
         </div>
     </div>
 
