--- a/cgj.html
+++ b/cgj.html
@@ -104,7 +104,7 @@
         </div>
     </div>
     <div class="d-flex justify-content-center">
-        <img id="" src="assets/img/cgj.jpg" alt=""/>
+        <img id="cgj" src="assets/img/cgj.jpg" alt=""/>
     </div>
 
     <div class="d-flex justify-content-center">
