--- a/index.html
+++ b/index.html
@@ -122,17 +122,17 @@
     </div>
 
 
-    <div class="row">
+    <div class="row my-5">
         <div class="d-flex justify-content-center">
             <h2 id="apropos">A PROPOS DE MOI</h2>
         </div>
     </div>
 
     <div class="row">
-        <div class="my-5 col-md-6 col-lg-6">
+        <div class=" col-md-6 col-lg-6">
             <h2 class="offset-3 maformation">MON PROJET</h2>
-            <p class="my-5">Passionnée de la technologie et du design, je suis fascinée par l'univers du développement web. <br>
-                Je suis particulièrement intéressée par le développement front-end.</p> <br>
+            <h5 class="my-5">Passionnée de la technologie et du design, je suis fascinée par l'univers du développement web. <br>
+                Je suis particulièrement intéressée par le développement front-end.</h5> <br>
         </div>
 
         <div class="my-5 col-md-6 col-lg-6">
