--- a/index.html
+++ b/index.html
@@ -122,20 +122,21 @@
     </div>
 
 
-    <div class="row my-5">
+    <div class="row my-3">
         <div class="d-flex justify-content-center">
             <h2 id="apropos">A PROPOS DE MOI</h2>
         </div>
     </div>
 
-    <div class="row">
-        <div class=" col-md-6 col-lg-6">
+    <div class="row my-2">
+        <div class=" col-md-6 col-lg-7">
             <h2 class="offset-3 maformation">MON PROJET</h2>
-            <h5 class="my-5">Passionnée de la technologie et du design, je suis fascinée par l'univers du développement web. <br>
-                Je suis particulièrement intéressée par le développement front-end.</h5> <br>
+            <h5 class="my-5">Passionnée de technologies et du design, je suis fascinée par l'univers du développement web. <br>
+                Je suis particulièrement intéressée par le développement front-end. J'ai notamment eu l'occasion
+            d'avoir une première expérience dans le front-end avec un stage puis une alternance chez Schneider Electric.</h5> <br>
         </div>
 
-        <div class="my-5 col-md-6 col-lg-6">
+        <div class="col-md-6 col-lg-5">
             <h2 class="offset-3 maformation">MA FORMATION</h2>
             <div class="timeline" id="tl">
                 <div class="event">
@@ -164,9 +165,10 @@
 
     <div class="row">
         <div class="col-12">
-        <h5 class="my-5">Je suis quelqu'un de déterminée et prête à tout pour atteindre mes objectifs. <br>
+        <h5 class="my-5">Je suis quelqu'un de déterminée et prête à tout pour atteindre mes objectifs.
             De nature créative et curieuse, j'aime énormément découvrir de nouvelles choses. <br>
-            En dehors de l'informatique,je suis passionnée par l'art sous toutes ses formes, mais aussi par la littérature.<br></h5>
+            <br>
+            En dehors de l'informatique, je suis passionnée par l'art sous toutes ses formes, mais aussi par la littérature.<br></h5>
         </div>
     </div>
 
