--- a/index.html
+++ b/index.html
@@ -11,7 +11,9 @@
 
 <body>
 
-    <h2>Activité 1 -Expérience de Stage - Développement d'une Fonctionnalité d'Internationalisation</h2>
+    <a href="https://main.drntsyrli43di.amplifyapp.com/index.html">RETOUR</a>
+
+    <h2>Activité 1 - Expérience de Stage - Développement d'une Fonctionnalité d'Internationalisation</h2>
 
     <section id="description">
         <h3>Description de la Mission</h3>
