--- a/index.html
+++ b/index.html
@@ -5,12 +5,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Expérience de Stage</title>
-    <link rel="stylesheet" href="assets/css/style.css">
-
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="assets/css/style.css">
 
+  
 </head>
 
 <body>
@@ -21,7 +21,9 @@
 
     <section id="description">
         <h3>Description de la Mission</h3>
-        <p>Au cours de mon stage, j'ai eu l'opportunité de contribuer significativement à l'amélioration d'une application destinée à un déploiement mondial.</p>
+        <p>
+            L’application sur laquelle j’ai travaillé pendant mon stage est destinée à être déployée dans le monde entier, dans ce contexte, j’ai été chargé d’améliorer le système d’internationalisation. 
+        </p>
     </section>
 
     <section id="competences">
@@ -36,7 +38,7 @@
 
             <li>
                 <h4>[CE 1.0 1] - Respect des Besoins du Client :</h4>
-                <p>J'ai établi une communication efficace avec le client pour comprendre et clarifier les exigences d'internationalisation.</p>
+                <p>J'ai établi une communication efficace avec le client (ici, mon tuteur de stage) pour comprendre et clarifier les exigences d'internationalisation.</p>
             </li>
 
             <!-- Niveau 3 - Adapter des applications sur un ensemble de supports -->
