--- a/index.html
+++ b/index.html
@@ -130,5 +130,25 @@
 </br>
     <img id="img" src="assets/img/trello.png" alt=""/>
 
+
+    <h2>Mon point de vue sur la formation</h2>
+
+    <p>
+        Au cours de ma formation, j'estime avoir atteint les objectifs fixés par le programme national du BUT. J'ai exploré de nombreuses branches de l'informatique, tout en approfondissant celles concernant mon parcours. En entreprise, lors des travaux dirigés (TD) et au cours des Situations d'Apprentissage et d'Évaluation (SAÉ), j'ai pu appliquer ces connaissances de manière concrète, renforçant ainsi mes compétences techniques.
+    </p>
+
+    <p>
+        J'ai, également, rencontré des défis, notamment du point de vue humain. La gestion des relations interpersonnelles dans un contexte professionnel a parfois été délicate, mais j'ai appris à résoudre ces situations de manière constructive. Du côté académique, certains cours ont présenté des difficultés, mais j'ai surmonté ces obstacles grâce à ma motivation et l'aide de mon entourage.
+    </p>
+
+    <p>
+        Ce qui m'a particulièrement plu tout au long de la formation, ce sont les projets de groupe multidisciplinaires. Travailler avec des étudiants aux compétences complémentaires a enrichi mon expérience et a renforcé ma capacité à collaborer de manière transversale.
+    </p>
+
+    <p>
+        En ce qui concerne mes projets futurs, mon objectif post-BUT est de poursuivre en master informatique en alternance. Cette décision découle directement de mon expérience en entreprise, qui m'a permis de combiner théorie et pratique. La formation a donc joué un rôle essentiel dans l'évolution et la définition claire de mon projet professionnel.
+    </p>
+
+    
     
 </section>
