--- a/index.html
+++ b/index.html
@@ -70,7 +70,10 @@
 
 
     <h2>Activité 2 - Amélioration des Performances d'une application</h2>
-    <p>Durant mon alternance, j'ai acquis une expertise dans l'analyse des performances logicielles en utilisant des outils avancés tels que la mémoïsation/programmation dynamique. Cela m'a permis d'améliorer grandement les performances de l'application.</p>
+    <p>Durant mon alternance, j'ai acquis une expertise dans l'analyse des performances logicielles en utilisant des outils avancés tels que la mémoïsation/programmation dynamique. Cela m'a permis d'améliorer grandement les performances de l'application.
+        Cette expérience pratique m'a permis de développer mon sens critique en matière d'analyse de performances, en identifiant les axes d’améliorations (mettre en cache une donnée récurrente du logiciel) et en proposant des solutions adaptées. J'ai également pu renforcer mes compétences en matière de programmation, 
+        en utilisant des techniques avancées pour optimiser le code et améliorer l'efficacité de l'application.
+    </p>
 
     <h3>Composantes Essentielles (CE) et Apprentissages Critiques (AC) Mobilisées :</h3>
     <ul>
@@ -95,6 +98,15 @@
             </p>
         </li>
     </ul>
+
+    <section id="traces">
+        <h3>Traces d'Activité</h3>
+        Diagramme de séquence du fonctionnement de la nouvelle fonctionnalité implémentée 
+    <p></p> 
+        <img id="img2" src="assets/img/memoisation.png" alt=""/>
+        
+    </section>
+
 
     <h2>Activité 3 - Intégration dans une équipe Informatique</h2>
     <p>Que ce soit lors de projets en cours, pendant mon stage et mon alternance, j'ai eu l'opportunité de m'intégrer pleinement dans une équipe informatique dynamique. Cette expérience a été cruciale pour le développement de mes compétences professionnelles.</p>
